<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="370dp"
        android:layout_height="280dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/starting_image_description" />

    <TextView
        android:id="@+id/nameOfApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/outfit"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/mav_way"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:padding="15dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfApp" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/appDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        android:backgroundTint="#6E77F6"
        android:fontFamily="@font/outfit"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/appDescription"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        android:fontFamily="@font/outfit"
        android:layout_marginTop="20dp"
        android:padding="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>