<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Fragments.SearchFragment">


        <TextView
            android:id="@+id/title_form"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/outfit"
            android:text="Explore"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view_form"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#D7DEDD"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_form" />

        <Button
            android:id="@+id/food_button"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:drawableTop="@drawable/ic_utensils"
            android:padding="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/food_button"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#E91E63"
            android:textSize="15dp"
            app:circularflow_radiusInDP="2dp"
            android:fontFamily="@font/outfit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_form"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/printing_button"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:backgroundTint="#0074DD"
            android:drawableTop="@drawable/ic_baseline_print_24"
            android:fontFamily="@font/outfit"
            android:padding="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/printing_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_button"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/vending_button"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:drawableTop="@drawable/ic_vending"
            android:padding="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/vending_button"
            android:textSize="15dp"
            android:backgroundTint="#FF9636"
            android:fontFamily="@font/outfit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/printing_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/helpdesk_button"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:drawableTop="@drawable/ic_baseline_info_24"
            android:padding="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/helpdesk_button"
            android:textSize="15dp"
            android:fontFamily="@font/outfit"
            android:textAllCaps="false"
            android:backgroundTint="#904FD0"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/vending_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/buildings_button"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:drawableTop="@drawable/ic_baseline_apartment_24"
            android:padding="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/buildings_button"
            android:textSize="15dp"
            android:backgroundTint="#955251"
            android:fontFamily="@font/outfit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/helpdesk_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/maps_button"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableTop="@drawable/ic_baseline_map_24"
            android:padding="20dp"
            android:text="@string/maps_button"
            android:textSize="15dp"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/outfit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/buildings_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>