<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".activities.LoginScreen">


        <TextView
            android:id="@+id/SignInHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit"
            android:text="@string/lets_sign_you_in"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/desctiptiontextsignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/SignInHeading"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/message"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#8E8383"
            android:background="@drawable/consist_text_input_box"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:fontFamily="@font/outfit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="90dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desctiptiontextsignin" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/consist_text_input_box"
            android:fontFamily="@font/outfit"
            app:layout_constraintHorizontal_bias="0.0"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColorHint="#8E8383"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EmailAddress2"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/outfit"
            android:textColor="#8E8383"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/EmailAddress2"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/outfit"
            android:textColor="#8E8383"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextTextPassword2"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/outfit"
            android:padding="0dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="#8E8383"

            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginEnd="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/signInButton"
            android:text="Sign In"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:layout_marginTop="50dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8E8383"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/registerinlogin"
            android:text="@string/register"
            android:layout_width="match_parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/ogblue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            android:layout_marginTop="20dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>